--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -241,7 +241,7 @@
 
             <div class="row search-row justify-content-center">
 
-                <div class="col-12 d-flex justify-content-left">
+                <div class="col-12 d-flex justify-content-left search-indicators">
 
                     <!-- Display 'previous' button. Disable if the page number is one, add a link if it isn't. -->
 
