--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -248,6 +248,10 @@ ul ul a {
     max-width: 80%;
 }
 
+h5 {
+    max-width: 80%;
+}
+
 
 /* display .overlay when it has the .active class */
 .search-overlay.active {
@@ -290,14 +294,10 @@ ul ul a {
 
 .results {
     margin: 4rem;
-    width: 70vw;
+    width: 50vw;
 
     @media (min-width: $bp-desktop) {
         margin: 8rem;
-    }
-
-    @media (max-width: $bp-ipadpro) and (orientation: landscape) {
-        margin-left: 1rem !important;
     }
 }
 
