Add overflow auto to the cards.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -694,14 +694,9 @@ ul {
   color: #2581B0;
 }
 
-.card-text {
-  text-overflow: ellipsis;
-  white-space: normal;
-  overflow: hidden;
-}
-
 .card-body {
   height: 30vh;
+  overflow: auto;
 }
 
 @media (width: 1024px) and (orientation: landscape) {
