Tweak height for very small devices.

--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -16,8 +16,8 @@
         height: 200vh;
     }
 
-    @media (max-width: $bp-mobile ) and (orientation:landscape) {
-        height: 400vh;
+    @media (min-width: $bp-mini ) and (orientation:landscape) {
+        height: 450vh;
     }
 
     @media (min-width: $bp-mobile) and (orientation: landscape) {
