--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1088,9 +1088,9 @@ ul {
   }
 }
 
-@media (max-width: 768px) and (orientation: landscape) {
+@media (min-width: 576px) and (orientation: landscape) {
   .wrapper {
-    height: 400vh;
+    height: 450vh;
   }
 }
 
