--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -6,14 +6,14 @@
 .wrapper {
     display: flex;
     align-items: stretch;
-    height: 450vh;
+    height: 400vh;
+
+    @media screen and (orientation:landscape) {
+        height: 400vh;
+    }
 
     @media (width: $bp-mobile) {
         height: 200vh;
-    }
-
-    @media (min-width: $bp-mini ) and (orientation:landscape) {
-        height: 400vh;
     }
 
     @media (min-width: $bp-mobile) and (orientation: landscape) {
