--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -1,3 +1,6 @@
+
+// This SCSS file styles the various pages throughout the user area.
+
 .myprofile-wrapper {
     height: auto;
 }
@@ -36,6 +39,8 @@ padding: 0.3rem !important;
     text-transform: uppercase;
     margin-bottom: 5vh;
 }
+
+// Styling for the three jumbotron in the profile section of the website.
 
 .profile-jumbo {
     max-width: 80%;
