--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -7,4 +7,5 @@
 @import "_user_area.scss";
 @import "_user_details.scss";
 
-// For comments on some of the thought processes behind the CSS, please look at main.css.
+// For comments on some of the thought processes behind the CSS, please look at the individual SCSS files.
+// Main.css is not commented.
