--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,3 @@
-/* General styling throughout the website. */
-
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
@@ -28,8 +26,6 @@ a:hover {
 .container-fluid {
   padding: 0;
 }
-
-/* Navbar styling. */
 
 .navLogo {
   height: 8vh;
@@ -90,8 +86,6 @@ a:hover {
   }
 }
 
-/* Header styling, */
-
 .page-header {
   font-family: 'Montserrat';
   font-weight: 700;
@@ -125,9 +119,6 @@ h3.heading {
   margin: 0 auto;
   display: block;
 }
-
-/* Footer styling, highly responsive and tweaked to display well across numerous
-devices. */
 
 footer {
   height: 29vh;
@@ -168,8 +159,6 @@ footer {
   }
 }
 
-/* Github logo in the footer. */
-
 .fa-github {
   color: white;
   font-size: 2rem;
@@ -180,7 +169,9 @@ footer {
   color: #2581B0;
 }
 
-
+.row {
+  margin-right: 0;
+}
 
 .footer {
   position: absolute;
@@ -1087,7 +1078,13 @@ ul {
 
 @media screen and (orientation: landscape) {
   .wrapper {
-    height: 400vh;
+    height: 530vh;
+  }
+}
+
+@media (width: 1200px) and (orientation: portrait) {
+  .wrapper {
+    height: 150vh !important;
   }
 }
 
@@ -1099,7 +1096,7 @@ ul {
 
 @media (min-width: 768px) and (orientation: landscape) {
   .wrapper {
-    height: 300vh;
+    height: 400vh;
   }
 }
 
@@ -1109,7 +1106,7 @@ ul {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1201px) {
   .wrapper {
     height: 200vh;
   }
