Correct card width for desktop.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -690,6 +690,12 @@ ul {
   max-width: 80%;
 }
 
+@media (min-with: 1200px) {
+  .card {
+    max-width: 50%;
+  }
+}
+
 .card-title {
   color: #2581B0;
 }
