Correct color on about page.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,7 +89,7 @@ a:hover {
 .page-header {
   font-family: 'Montserrat';
   font-weight: 700;
-  color: white;
+  color: #2581B0;
   text-shadow: 1em 0.5em #0B132B;
   text-transform: uppercase;
 }
@@ -337,7 +337,7 @@ a:hover {
 .page-header {
   font-family: 'Montserrat';
   font-weight: 700;
-  color: white;
+  color: #2581B0;
   text-shadow: 1em 0.5em #0B132B;
   text-transform: uppercase;
 }
@@ -848,7 +848,7 @@ a:hover {
 .page-header {
   font-family: 'Montserrat';
   font-weight: 700;
-  color: white;
+  color: #2581B0;
   text-shadow: 1em 0.5em #0B132B;
   text-transform: uppercase;
 }
