--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -99,7 +99,7 @@ a:hover {
 .page-header {
     font-family: 'Montserrat';
     font-weight: 700;
-    color: white;
+    color: $brightmidblue;
     text-shadow: 1em 0.5em $darkblue;
     text-transform: uppercase;
 
