--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -64,7 +64,7 @@
         <div class="heading-ul"></div>
     </div>
 
-    <div class="container">
+    <div class="container carousel-container">
 
         <!-- Much of the carousel code on this section was taking from Anna Greaves' index.html page for her FamilyHub project. Link: https://github.com/Code-Institute-Submissions/familyhub/blob/master/templates/pages/index.html -->
 
