--- a/static/css/main.css
+++ b/static/css/main.css
@@ -690,9 +690,9 @@ ul {
   max-width: 80%;
 }
 
-@media (min-with: 1200px) {
-  .card {
-    max-width: 50%;
+@media (min-width: 1200px) {
+  .carousel-container {
+    width: 70%;
   }
 }
 
